--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       </section>
       <section class="article" style="max-width: 600px;">
         <p class="quote">
-          戰時的記憶湧回了很多意大利老人的腦海，電話採訪的另一頭，年過八旬的瑪利亞就帶着一絲平靜地聊起了二戰。「我對第二次世界大戰還有一些記憶：我還是個孩子，羅馬被轟炸，每個人都很害怕。有時我會覺得，我生命結束的時刻，就會像開始時一般。
+          戰時的記憶湧回了很多意大利老人的腦海，電話採訪的另一頭，年過八旬的瑪利亞就帶着一絲平靜地聊起了二戰。「我對第二次世界大戰還有一些記憶：我還是個孩子，羅馬被轟炸，每個人都很害怕。有時我會覺得，我生命結束的時刻，就會像開始時一般。」
         </p>
       </section>
       <section class="article content" style="max-width: 500px;">
