--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             病毒隨著人群的腳步遷移、複製、蔓延，我們所處的文化、社會和政治空間，也在這股針對所有人的威脅下，被重新定義著。世界像是在發生翻天覆地的變化，而我們每個人，都是觀察這些變化的原點。
           </p>
           <p>本頁面集合了端傳媒自疫情爆發以來，發自世界各地的一手觀察和重磅分析，希望能給您帶來世界各地疫情下，並為您提供盡可能更多的思路、更多真實的故事與掙扎、更多陰影下鮮活的細節。</p>
-          <p style="font-weight: 600;">該頁面將持續更新，每週都會定期帶來關於2019冠狀病毒肺炎怎樣改變這個世界的深度報道，歡迎收藏。</p>
+          <p style="font-weight: 600; color: #fff000">本頁面匯總的逾40篇深度文章，限時免費閱讀。<a href="https://theinitium.com/subscription/offers/?&utm_source=initium&utm_medium=initium&utm_campaign=initium_project
+          " target="_blank">歡迎加入端傳媒，付費支持好新聞，看到寬廣的世界。<i class="fas fa-external-link-alt" style="font-size:15px"></i></a>
+          </p>
+          <!-- <p style="font-weight: 600;">該頁面將持續更新，每週都會定期帶來關於2019冠狀病毒肺炎怎樣改變這個世界的深度報道，歡迎收藏。</p> -->
       </section>
       <section class="album" id="title-1">
         <ul>
