--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </svg></div>
         </a>
         <div class="cover__wrapper">
-
+          <h1 class="cover__title"></h1><img src="./static/images/title.png" style="width: 100%;display:;">
           <div class="cover__share"><a class="cover__share--facebook"
               href="https://www.facebook.com/sharer.php?s=100&amp;u=https://theinitium.com/project/20200402-international-covid19-pandemic-reporting"
               onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=368,width=600'); return false;"
@@ -78,7 +78,6 @@
               </svg></a>
 
           </div>
-          <h1 class="cover__title"></h1><img src="./static/images/title.png" style="width: 100%;display:;">
           <!-- <ul class="cover__meta">
             <li>策劃：甯卉</li>
             <li class="cover__meta--date">2020-04-02</li>
@@ -87,7 +86,7 @@
             <p></p>
           </div> -->
         </div>
-        <div class="cover__caption">插畫：阮永翰</div>
+        <div class="cover__caption">攝：Mladen Antonov/AFP via Getty Images</div>
       </section>
       <section class="menu">
         <div class="menu__box"><a href="#title-1">全球大流行</a></div>
@@ -552,11 +551,15 @@
           </tr>
           <tr>
             <td>設　　計</td>
-            <td><strong>阮永漢、曾立宇</strong></td>
+            <td><strong>阮永漢、Tseng Lee</strong></td>
           </tr>
           <tr>
             <td>圖片編輯</td>
             <td><strong>林振東</strong></td>
+          </tr>
+          <tr>
+            <td>製　　作</td>
+            <td><strong>郭瑾燁</strong></td>
           </tr>
         </table>
       </section>
