--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting">
   <meta property="og:title" content="世界各地的我們，怎樣與病毒共處？">
-  <meta property="og:description" content="">
+  <meta property="og:description"
+    content="本頁面集合了端傳媒自疫情爆發以來，發自世界各地的一手觀察和重磅分析，希望能給您帶來世界各地疫情下，並為您提供盡可能更多的思路、更多真實的故事與掙扎、更多陰影下鮮活的細節。">
   <meta property="og:image"
-    content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting/static/images/social.png">
+    content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting/static/images/social-2.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting">
   <meta name="twitter:title" content="世界各地的我們，怎樣與病毒共處？">
-  <meta name="twitter:description" content="">
+  <meta name="twitter:description"
+    content="本頁面集合了端傳媒自疫情爆發以來，發自世界各地的一手觀察和重磅分析，希望能給您帶來世界各地疫情下，並為您提供盡可能更多的思路、更多真實的故事與掙扎、更多陰影下鮮活的細節。">
   <meta name="twitter:domain" content="theinitium.com">
   <meta name="twitter:site" content="@initiumnews">
   <meta name="twitter:creator" content="@initiumnews">
   <meta name="twitter:image:src"
-    content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting/static/images/social.png">
+    content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting/static/images/social-2.png">
   <link rel="stylesheet" type="text/css" href="./static/build.css?v=0.4.1">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./static/app.min.css">
@@ -62,7 +64,6 @@
             </svg></div>
         </a>
         <div class="cover__wrapper">
-          <h1 class="cover__title"></h1><img src="./static/images/title.png" style="width: 100%;display:;">
           <div class="cover__share"><a class="cover__share--facebook"
               href="https://www.facebook.com/sharer.php?s=100&amp;u=https://theinitium.com/project/20200402-international-covid19-pandemic-reporting"
               onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=368,width=600'); return false;"
@@ -75,9 +76,9 @@
               title="分享到 Twitter"><svg class="icon icon--twitter" viewBox="0 0 127 100"
                 xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="#twitter"></use>
-              </svg></a>
+              </svg></a></div>
+          <h1 class="cover__title"></h1><img src="./static/images/title.png" style="width: 100%;display:;">
 
-          </div>
           <!-- <ul class="cover__meta">
             <li>策劃：甯卉</li>
             <li class="cover__meta--date">2020-04-02</li>
