--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>世界各地的我們，怎樣與病毒共處？</title>
+  <title>【限時免費】世界各地的我們，怎樣與病毒共處？</title>
   <meta name="keywords" content="端,端傳媒,Initium,Initium Media,攝影,圖集">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -12,14 +12,14 @@
   <link ref="shortcut icon" href="./static/favicon.ico?v=0.4.1">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting">
-  <meta property="og:title" content="世界各地的我們，怎樣與病毒共處？">
+  <meta property="og:title" content="【限時免費】世界各地的我們，怎樣與病毒共處？">
   <meta property="og:description"
     content="本頁面集合了端傳媒自疫情爆發以來，發自世界各地的一手觀察和重磅分析，希望能給您帶來世界各地疫情下，並為您提供盡可能更多的思路、更多真實的故事與掙扎、更多陰影下鮮活的細節。">
   <meta property="og:image"
     content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting/static/images/social-2.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://theinitium.com/project/20200402-international-covid19-pandemic-reporting">
-  <meta name="twitter:title" content="世界各地的我們，怎樣與病毒共處？">
+  <meta name="twitter:title" content="【限時免費】世界各地的我們，怎樣與病毒共處？">
   <meta name="twitter:description"
     content="本頁面集合了端傳媒自疫情爆發以來，發自世界各地的一手觀察和重磅分析，希望能給您帶來世界各地疫情下，並為您提供盡可能更多的思路、更多真實的故事與掙扎、更多陰影下鮮活的細節。">
   <meta name="twitter:domain" content="theinitium.com">
