--- a/index.html
+++ b/index.html
@@ -110,7 +110,16 @@
         <h2 style="text-align: center">編輯推介／「去記得，被遺忘的」</h2>
         <p>好像，遺忘是一件後知後覺的事情。總是在為時已晚的時候，才記起我們忘記了什麼。</p>
         <p>
-          媒體最不缺的，就是當下的恍然大悟。1月底，在疫情剛剛從武漢傳出到周邊國的時候，我們著急地去探尋，才知道這個世界原來從未準備好去應對下一場大流行病……3月，當確診人數在歐美數過呈指數上升時，我們發現有幾個國家和地區一度把壓平了這條曲線，其中就有新加坡——直到一個月後，新加坡勞工宿舍群4月的感染大爆發，我們又再一次被現實提醒：病毒畫出的軌跡，必然是被人類流動已經描過的。
+          媒體最不缺的，就是當下的恍然大悟。1月底，在疫情剛剛從武漢傳出到周邊國的時候，我們著急地去探尋，才知道這個<a
+            href="https://theinitium.com/article/20200220-international-world-preparedness-to-next-pandemics/"
+            target="_blank" style='color:#5eddda'>世界原來從未準備好去應對下一場大流行病 <i class="fas fa-external-link-alt"
+              style="font-size:12px"></i></a>……3月，當確診人數在歐美數過呈指數上升時，我們發現<a
+            href="https://theinitium.com/article/20200401-international-tw-hk-sng-flatten-the-curve/" target="_blank"
+            style='color:#5eddda'>有幾個國家和地區一度壓平了這條曲線 <i class="fas fa-external-link-alt"
+              style="font-size:12px"></i></a>，其中就有新加坡──直到一個月後，<a
+            href="https://theinitium.com/article/20200424-international-singapore-covid-19-among-migrant-workers/"
+            target="_blank" style='color:#5eddda;font: weight 600;'>新加坡勞工宿舍群4月的感染大爆發 <i class="fas fa-external-link-alt"
+              style="font-size:12px"></i></a>，我們又再一次被現實提醒：病毒畫出的軌跡，必然是被人類流動已經描過的。
         </p>
         <p>這些流動的路徑中，越被遺忘，越脆弱；越脆弱，越被遺忘。</p>
         <p>在端的編輯部，在滔滔不惜的信息流中央，很多時候，我們都希望能與讀者一起，彼此提醒：是不是忘了什麼？若你我仔細地、批評地環顧四周，是否能及早發現些什麼？而我們一起謹記的，會不會變得更堅強？</p>
